--- a/tfvars.example
+++ b/tfvars.example
@@ -1,6 +1,7 @@
 do_token = "DO_API_TOKEN"
 do_ssh_fingerprint = ["00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00"]
 do_region = "DO_REGION"
+do_image_name = "DO_IMAGE_NAME"
 nextcloud_subdomain_name = "subdomain"
 nextcloud_root_domain_name = "example.com"
 nextcloud_full_fqdn = "subdomain.example.com"
